--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -22,6 +22,26 @@
         </field>
     </record>
 
+    <record id="view_estate_property_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search string="Estate Property">
+                <field name="name"/>
+                <field name="postcode"/>
+                <field name="expected_price"/>
+                <field name="bedrooms"/>
+                <field name="living_area"/>
+                <field name="facades"/>
+                <separator/>
+                <filter string="Available" name="date_availability" domain="[('date_availability', '&gt;=', (context_today() - datetime.timedelta(10)).strftime('%Y-%m-%d') )]"/>
+                <filter string="Archived" name="inactive" domain="[('active', '=', False)]"/>
+                <group expand="1" >
+                    <filter string="Postcode" name="postcode" context="{'group_by':'postcode'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
 
      <record id="estate_property_view_form" model="ir.ui.view">
         <field name="name">estate.property.form</field>
