--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -80,6 +80,12 @@
                                     <field name="garden_orientation"/>
                                 </group>
                             </page>
+                            <page string="Other Info">
+                                <group>
+                                    <field name="salesman_id"/>
+                                    <field name="buyer_id"/>
+                                </group>
+                            </page>
                         </notebook>
                     </group>
                 </sheet>
@@ -93,5 +99,10 @@
         <field name="view_mode">tree,form</field>
     </record>
 
+    <record id="estate_property_tag_action" model="ir.actions.act_window">
+        <field name="name">Property Tags</field>
+        <field name="res_model">estate.property.tag</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 
 </odoo>
