--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -80,6 +80,10 @@
                                     <field name="garden_orientation"/>
                                 </group>
                             </page>
+                            <page string="Offers">
+                                <group>
+                                </group>
+                            </page>
                             <page string="Other Info">
                                 <group>
                                     <field name="salesman_id"/>
